--- a/templates/application.html
+++ b/templates/application.html
@@ -12,7 +12,7 @@
 <div class="row">
    <div class="col pt-3">
       <div class="card card-body">
-         <table class="table table-striped table-hover table-bordered table-sm bg-white">
+         <table class="table table-striped table-hover table-bordered table-sm ">
             <thead>
                <tr>
                   <td>Cours</td>
@@ -70,7 +70,7 @@
       </div>
       <div class="pt-3">
         <div class="card card-body">
-          <table class="table table-striped table-hover table-bordered table-sm bg-white">
+          <table class="table table-striped table-hover table-bordered table-sm">
              <thead>
                 <tr>
                    <td>Nom</td>
@@ -92,7 +92,7 @@
    </div>
   <div class="pt-3">
      <div class="card card-body">
-        <table class="table table-striped table-hover table-bordered table-sm bg-white">
+        <table class="table table-striped table-hover table-bordered table-sm ">
            <thead>
               <tr>
                  <td>Cours</td>
