--- a/templates/home.html
+++ b/templates/home.html
@@ -25,18 +25,13 @@
          <h5>Téléphone : {{account['phone']}}</h5>
          <h5>Mail : {{account['email']}}</h5>
       </div>
-      <div class="card card-body">
-      <form action="{{url_for('mainviews.edituser')}}" method="POST">
-         <button class="btn btn-info btn-block">Modifier</button>
-      </form>
-      </div>
    </div>
 </div>
 <!-- Si vous voyez ce message, c'est que vous n'êtes pas en train d'utiliser le site dans
    son utilisation habituelle. Ne vous étonnez pas si vous tombez sur un gandalf qui danse
    sur une musique saxo -->
 <div class="pt-3">
-   <table class="table table-striped table-hover table-bordered table-sm bg-white">
+   <table class="table table-striped table-hover table-bordered table-sm ">
       <thead>
          <tr>
             <td>Date</td>
