--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <div class="pt-3">
    <div class="card card-body">
       <div class="table-responsive pt-3">
-         <table class="table table-striped table-hover table-bordered table-sm bg-white" style="width:100%">
+         <table class="table table-striped table-hover table-bordered table-sm" style="width:100%">
             <thead>
                <tr>
                   <td>Nom</td>
