--- a/templates/config.html
+++ b/templates/config.html
@@ -11,7 +11,7 @@
                <input type="text" class="form-control" name="value" placeholder="Valeur" required>
             </div>
             <div class="form-group">
-               <label> Description :</label>
+               <label>Description :</label>
                <input type="text" class="form-control" name="descr" placeholder="Description" required>
             </div>
             <div class="form-group">
@@ -47,7 +47,7 @@
 <div class="row">
    <div class="col pt-3">
       <div class="card card-body">
-         <table class="table table-striped table-hover table-bordered table-sm bg-white">
+         <table class="table table-striped table-hover table-bordered table-sm">
             <thead>
                <tr>
                   <td>Nom</td>
@@ -87,7 +87,7 @@
                <input type="text" class="form-control" name="value" placeholder="Valeur" required>
             </div>
             <div class="form-group">
-               <label> Description :</label>
+               <label>Description :</label>
                <input type="text" class="form-control" name="descr" placeholder="Description" required>
             </div>
             <div class="form-group">
