--- a/templates/membres.html
+++ b/templates/membres.html
@@ -83,7 +83,7 @@
       </div>
    </div>
    <div class="col-md-6 pt-3">
-      <table class="table table-striped table-hover table-bordered table-sm bg-white">
+      <table class="table table-striped table-hover table-bordered table-sm">
          <thead>
             <tr>
                <td>Nom</td>
