--- a/templates/sujets.html
+++ b/templates/sujets.html
@@ -5,7 +5,7 @@
    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 {% endfor %}{% endif %}{% endwith %}
-<div class="row">
+}<div class="row">
    <div class="col pt-3">
       <div class="card card-body">
          <h2>
@@ -49,7 +49,7 @@
 <div class="row">
    <div class="col pt-3">
       <div class="card card-body">
-         <table class="table table-striped table-hover table-bordered table-sm bg-white">
+         <table class="table table-striped table-hover table-bordered table-sm">
             <thead>
                <tr>
                   <td>Sujet</td>
