--- a/templates/training.html
+++ b/templates/training.html
@@ -10,7 +10,7 @@
 				<div class="form-group">
 					<label>Exercice :</label>
 					<select class="form-control" name = "type">
-					   <option value="{{sujetsconf[0]}}">Sélectionnez une option&hellip;</option>
+					   <option value="{{session['sujets']}}">Sélectionnez une option&hellip;</option>
 					   {% for sujets in sujetsconf %}
 					   <option value="{{sujets}}">{{sujets}}</option>
 					   {% endfor%}
