--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -15,7 +15,7 @@
           <center>
              <h3>Ajouter un cours</h3>
           </center>
-          <form action="{{url_for('adminviews.add_cours')}}" method="POST">
+          <form action="{{url_for('adminviews.createcours')}}" method="POST">
              <div class="form-group">
                 <label> Titre du cours :</label>
                 <input class="form-control" type="text" class="form-control" name="titre" placeholder="Titre du cours" required>
