--- a/templates/editmembres.html
+++ b/templates/editmembres.html
@@ -4,7 +4,7 @@
 <div class="row">
 <div class="col-md-8 offset-md-2">
    <div class="card card-body">
-      <form action="/update/{{contact.0}}" method="POST">
+      <form action="/updatemembres/{{contact.0}}" method="POST">
          <div class="form-group">         
                <label> Identifiant :</label>
             <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" 
