--- a/templates/training.html
+++ b/templates/training.html
@@ -48,7 +48,7 @@
 <div class="row">
    <div class="col pt-3">
    		<div class="card card-body">
-   			<form action="{{url_for('trainingviews.equvsequ')}}" method="POST">
+   			<form action="{{url_for('trainingviews.configtraining')}}" method="POST">
    				{% if session['equvsequ'] == True %}
 	   			<button class="btn btn-info btn-block">Entrainenement en groupe</button>
 	   			{% endif %}
