--- a/templates/editsujet.html
+++ b/templates/editsujet.html
@@ -2,27 +2,31 @@
 {% block title%}Edit{% endblock %}
 {% block body %}
 <div class="row">
-<div class="col-md-8 offset-md-2">
-   <div class="card card-body">
-      <form action="/{{sujet.0}}" method="POST">
-         <div class="form-group">
-            </label>Sujet :</label>
-            <input type="text" placeholder = "Sujet" name="sujet" value="{{sujet.1}}" class="form-control">
-         </div>
-         <div class="form-group">
-            <label> Type :</label>
-            <select class="form-control" name = "type">
-               <option value="{{sujet.2}}">Sélectionnez une option&hellip;</option>
-               {% for sujets in sujetsconf %}
-               <option value="{{sujets}}">{{sujets}}</option>
-               {% endfor%}
-            </select>
+   <div class="col-md-8 offset-md-2">
+      <div class="card card-body">
+         <form action="/updatesujet/{{sujet.0}}" method="POST">
             <div class="form-group">
-               <button type="submit" class="btn btn-primary btn-block">
-               Update
-               </button>
+               </label>Sujet :</label>
+               <input type="text" placeholder = "Sujet" name="sujet" value="{{sujet.1}}" class="form-control">
             </div>
-      </form>
+            <div class="form-group">
+               <label> Type :</label>
+               <select class="form-control" name = "type">
+                  <option value="{{sujet.2}}">Sélectionnez une option&hellip;</option>
+                  {% for sujets in sujetsconf %}
+                  <option value="{{sujets}}">{{sujets}}</option>
+                  {% endfor%}
+               </select>
+            </div>
+            <div class="form-group">
+               <div class="form-group">
+                  <button type="submit" class="btn btn-primary btn-block">
+                  Update
+                  </button>
+               </div>
+            </div>
+         </form>
+         </div>
       </div>
    </div>
 </div>
