--- a/templates/edituser.html
+++ b/templates/edituser.html
@@ -13,7 +13,7 @@
 <div class="row">
    <div class="col pt-3">
       <div class="card card-body">
-         <form action="edituser/{{contact.0}}" method="POST">
+         <form action="updateuser/{{contact.0}}" method="POST">
             <div class="form-group" data-children-count="1">
                <label> École :</label>
                <select class="form-control" name="ecole" required>
