--- a/templates/createuser.html
+++ b/templates/createuser.html
@@ -19,7 +19,7 @@
       </div>
       {% endfor %}{% endif %}{% endwith %}
       <div class="card card-body">
-         <form action="{{url_for('mainviews.add_contact')}}" method="POST">
+         <form action="{{url_for('mainviews.addusers')}}" method="POST">
             <div class="form-group">
                <label> Nom :</label>
                <input type="text" class="form-control" name="nom" placeholder="Nom" required>
