--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
    </div>
    
    <div class="card card-body">
-  <form action="{{ url_for('mainviews.createaccount') }}">
+  <form action="{{ url_for('mainviews.createuser') }}">
      <button class="btn btn-success btn-block">Créer un compte</button>
   </form>
   </div>
