[LA JOUTE WEB APP] 1.0

--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -12,7 +12,7 @@
 
 <div class="row">
    <div class="col pt-3">
-      <div class="card card-body">x
+      <div class="card card-body">
          <center>
             <h3>Ajouter un cours</h3>
          </center>
