[LA JOUTE WEB APP] 1.0

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for("viewBase.calendrier")}}">Calendrier</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
                             <a class="nav-link" href="{{url_for("viewBase.application")}}">Application</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Formation</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{{url_for("viewBase.training")}}">Entrainement</a>
