[LA JOUTE WEB APP] 1.0

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>{% block title%} {% endblock %}</title>
-        <link rel="shortcut icon" href="/static/lajoute/logo.png" type="image/png">
+        <link rel="shortcut icon" href="/static/img/logo.png" type="image/png">
         <meta name="viewport" content="width=device-width" />
         {% if session['theme'] == 'light' %}
         <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.css">
